@@ -301,21 +301,11 @@ First, you must start OAR daemon on the server (its name is "Almighty").
 
 Then you have to insert new resources in the database via the command
 oarnodesetting_.
-If you want to have an idea how does it work then launch
-*$PREFIX/oar/detect_resources.sh*. It will print right commands execute with
-an appropriate value for the memory and the cpuset properties.
 
-If you want to initialize your whole cluster in 1 command you can use this one
-(tune it to fit your cluster). You must be oar to run this command because
-oarnodesetting_ will be called and the sentinelle.pl will log onto all nodes
-stored in "node_list.txt" file without password:
-::
-
-    export PREFIX=/usr/local
-    $PREFIX/oar/sentinelle.pl -f node_list.txt \
-    -p "$PREFIX/oar/detect_resources.sh" | sh
-
-Then you can launch the oarnodes command and see all new resources inserted.
+If you want to **automatically** initialize your cluster then you just need to
+launch *oar_resources_init*. It will detect the resources from the nodes that
+you put in a file and store right OAR commands to initialize the database with
+the appropriate values for the memory and the cpuset properties. Just try...
 
 A tool is now available to help you managing your oar resources and admission 
 rules : oaradmin.
