@@ -143,6 +143,8 @@ chown oar:oar /usr/sbin/oarproperty
 chmod 6750 /usr/sbin/oarproperty
 chown oar:oar /usr/sbin/oarmonitor
 chmod 6750 /usr/sbin/oarmonitor
+chown oar:oar /usr/sbin/oar_resources_init
+chmod 6750 /usr/sbin/oar_resources_init
 
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
